--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Grid Layout</title>
+    <title>Two column responsive layout</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="" />
 </head>
@@ -30,4 +30,6 @@
     </div>
 
 
-</body></html>
+</body>
+
+</html>
